[gd_scene load_steps=9 format=3 uid="uid://2fhghod5q878"]

[ext_resource type="Script" path="res://Scripts/tower_2.gd" id="1_i7r06"]
[ext_resource type="Texture2D" uid="uid://cq26o8p7o1d4p" path="res://assets/towers/Tower 2.4.png" id="2_5jn44"]
[ext_resource type="Texture2D" uid="uid://ctcqm1mh3jatu" path="res://assets/towers/Tower 2.3.png" id="3_xsfbq"]
[ext_resource type="Texture2D" uid="uid://dij2om23hwxnr" path="res://assets/towers/Tower 2.2.png" id="4_1rnec"]
[ext_resource type="Texture2D" uid="uid://clh30fpqvupkl" path="res://assets/towers/Tower 2.1.png" id="5_nc1sh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_aryud"]
radius = 112.285

[sub_resource type="CircleShape2D" id="CircleShape2D_2qv2n"]
radius = 24.0

[sub_resource type="SpriteFrames" id="SpriteFrames_4stf4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_5jn44")
}, {
"duration": 1.0,
"texture": ExtResource("3_xsfbq")
}, {
"duration": 1.0,
"texture": ExtResource("4_1rnec")
}, {
"duration": 1.0,
"texture": ExtResource("5_nc1sh")
}],
"loop": false,
"name": &"Shoot",
"speed": 5.0
}]

[node name="tower2" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_i7r06")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_aryud")

[node name="Polygon2D" type="Polygon2D" parent="CollisionShape2D"]
color = Color(0.454902, 0.454902, 0.454902, 0.392157)

[node name="SpawnCheck" type="Area2D" parent="CollisionShape2D"]
unique_name_in_owner = true

[node name="Hitbox" type="CollisionShape2D" parent="CollisionShape2D/SpawnCheck"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_2qv2n")

[node name="HitboxPolygon" type="Polygon2D" parent="CollisionShape2D/SpawnCheck/Hitbox"]
color = Color(0.454902, 1, 0.454902, 0.392157)
polygon = PackedVector2Array(-16, -16, -16, 0, 0, 0, 0, -16)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -4)
sprite_frames = SubResource("SpriteFrames_4stf4")
animation = &"Shoot"

[node name="ShootingPoint" type="Marker2D" parent="AnimatedSprite2D"]
position = Vector2(0, -6)

[node name="Timer" type="Timer" parent="."]
process_callback = 0
autostart = true

[connection signal="area_entered" from="CollisionShape2D/SpawnCheck" to="." method="_on_spawn_check_area_entered"]
[connection signal="area_exited" from="CollisionShape2D/SpawnCheck" to="." method="_on_spawn_check_area_exited"]
[connection signal="input_event" from="CollisionShape2D/SpawnCheck" to="." method="_on_spawn_check_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
